<resources>
    <string name="app_name">Intelect App</string>
    <string name="title_activity_main_menu">Intelect App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="opcion_agregar">Agregar</string>
    <string name="opcion_listar">Listado</string>

    <string name="menu_clientes">Clientes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="informe_redencion">Informe N°</string>
    <string name="informe_registrado">INFORME GASTO</string>
    <string name="fecha_rendicion_listado">Fecha de registro:</string>
    <string name="total_rendido_listado">Total rendido:</string>
    <string name="fecha_al_listado">Al:</string>
    <string name="fecha_del_listado">Del:</string>
    <string name="docente_rendicion_registro">Docente</string>
    <string name="anticipo_rendicion_registro">Anticipo a rendir</string>
    <string name="btn_agregar_comprobante">Agregar comprobante</string>
    <string name="btn_registro_rendicion">Registrar y finalizar</string>
    <string name="restante_redencion">DEV. RESTANTE:</string>
    <string name="devolucion_rendicion_registro">DEVOLUCIÓN REALIZADA:</string>
    <string name="de_rendicion">DE</string>
    <string name="movilidad_interna_rendicion">MOVILIDAD INTERNA</string>
    <string name="pasajes_terrestres_rendicion">PASAJES TERRESTRES</string>
    <string name="alimentacion_rendicion">ALIMENTACION</string>
    <string name="hotel_rendicion">HOTEL:</string>
    <string name="factura_total_listado">FACTURA</string>
    <string name="comprobante_listado">Comprobante:</string>
    <string name="fecha_emision_listado">Fecha de emisión:</string>
    <string name="rubro_listado">Rubro:</string>
    <string name="anticipo_rendicion">Anticipo a rendir</string>
    <string name="registrar">Registrar</string>
    <string name="title_registro_rendicion_gastos">Registrar rendición de gastos</string>
    <string name="title_rendicion_gastos">Rendición de gastos</string>
    <string name="dialog_agregar_comprobante">Debes agregar un comprobante</string>
    <string name="login_email">Email</string>
    <string name="login_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="title_login">Inicio de sesión</string>
    <string name="txt_validation">Debes ingresar el email y contraseña</string>
    <string name="txt_validation_informe">Debe devolver el total de viaticos asignado</string>
    <string name="total_de_viaticos">TOTAL DE VIATICOS</string>
    <string name="motivo_del_anticipo">Motivo del Anticipo</string>
    <string name="descripci_n">Descripción</string>
    <string name="fecha_inicio">Fecha inicio</string>
    <string name="fecha_fin">Fecha fin</string>
    <string name="sede_destino">Sede destino</string>
    <string name="los_anticipos_a_abonar_son">Los anticipos a abonar son:</string>
    <string name="limpiar">limpiar</string>
    <string name="descripci_n_del_anticipo">Descripción del anticipo</string>
    <string name="del">Del:</string>
    <string name="al">Al:</string>
    <string name="anticipos">Anticipos</string>
    <string name="rendici_n_de_gastos">Rendición de gastos</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="monto_rentir">Monto a rendir</string>
    <string name="anticipo">Anticipo :</string>
    <string name="option_rechazar">Rechazar</string>
    <string name="option_aprobar">Aprobar</string>
    <string name="anticipo_info">Solicitud de anticipo registrado</string>
    <string name="informe_info">Informe rendicion registrado</string>
    <string name="informe_title">INFORME GASTO</string>
    <string name="estado_aprobado">APROBADO</string>
    <string name="estado_registrado">REGISTRADO</string>
    <string name="estado_designado">DESIGNADO</string>
    <string name="estado_rechazado">RECHAZADO</string>

    <string name="estado_rendido">RENDIDO</string>
    <string name="estado_observado">OBSERVADO</string>
    <string name="estado_pendiente">PENDIENTE</string>
    <string name="estado_rendicionr">RECHAZADO REN</string>
    <string name="estado_rendiciona">APROBADO REN</string>
    <string name="estado_cerrado">CERRADO</string>
    <string name="estado_subsanado">SUBSANADO</string>
    <string name="monto_anticipo">Monto:</string>

    <string name="validacion_motivo">Por favor seleccione un motivo de anticipo</string>
    <string name="validacion_sede">Por favor seleccione una sede</string>
    <string name="validacion_descripcion">Por favor ingrese una descripcion</string>
    <string name="validacion_fechas">La fecha de fin debe ser mayor a la de inicio</string>

    <string name="si">SI</string>
    <string name="confirmacion">CONFIRMACION</string>
    <string name="confirmacion_informe">¿Desea grabar informe?</string>
    <string name="confirmacion_anticipo">¿Desea grabar el anticipo?</string>
    <string name="registrar_solicitud">Registrar solicitud</string>
    <string name="comprometidos_con_tu_educacion">Comprometidos con tu educacion</string>
    <string name="subsanar">Subsanar</string>
    <string name="universidad_privada_intelect">UNIVERSIDAD PRIVADA INTELECT</string>

    <string name="solicitud_anticipo">Solicitar anticipo</string>
    <string name="cerrar">Cerrar</string>

    <string name="opcion">Opciones</string>
    <string name="op_aprobar">Aprobar</string>
    <string name="op_observar">Observar</string>
    <string name="op_rechazar">Rechazar</string>
    <string name="H_aprob">Aprobación de anticipo exitosa</string>
    <string name="H_rechazo">Rechazo del anticipo exitoso</string>
    <string name="ver_instancia">Ver instancia</string>
    <string name="instancia">INSTANCIA :</string>
    <string name="estado">ESTADO :</string>
    <string name="evaluador">EVALUADOR :</string>
    <string name="descripcion">DESCRIPCION :</string>
    <string name="jefe_profesores">Jefe de profesores</string>
    <string name="administrativo">Personal administrativo</string>
    <string name="verificar_seleccion_anticipo">Debes seleccionar un anticipo</string>
    <string name="serie">Serie</string>
    <string name="correlativo">Correlativo</string>
    <string name="emision">Emision</string>
    <string name="monto_total">Monto total</string>
    <string name="foto">Foto</string>
    <string name="ruc_de_la_empresa_emisora">RUC de la empresa emisora</string>
    <string name="num_operacion">Número de operacion</string>
    <string name="boleta">BOLETA</string>
    <string name="factura">FACTURA</string>
    <string name="voucher">VOUCHER DE DEVOLUCION</string>
    <string name="devolucion">DEVOLUCION</string>

    <string name="validacion_rubro">Por favor seleccione un rubro</string>
    <string name="validacion_tipo">Por favor seleccione un tipo de comprobante</string>
    <string name="validacion_num_operacion">Por favor ingrese un numero de operacion</string>
    <string name="validacion_ruc">Por favor ingrese RUC de la empresa</string>
    <string name="validacion_serie">Por favor ingrese la serie de comprobante</string>
    <string name="validacion_emision">Por favor ingrese la fecha de emision</string>
    <string name="validacion_correlativo">Por favor ingrese el correlaivo de comprobante</string>
    <string name="validacion_monto">Por favor ingrese el monto del comprobante</string>
    <string name="validacion_foto">Por favor ingrese la foto del comprobante</string>

    <string name="capacitacion">CAPACITACION</string>
    <string name="dictado">DICTADO DE CLASES</string>
    <string name="otros">OTROS</string>
    <string name="ponencia">PONENCIA</string>
    <string name="reunion">REUNION</string>

    <string name="docente">Docente</string>
    <string name="jefe">Jefe de profesores</string>
    <string name="administrativo_rol">Administrativo</string>

    <string name="ver_comprobantes">Ver comprobantes</string>
    <string name="approve_validation_informe">Se aprobó</string>
    <string name="reject_validation_informe">Se rechazó</string>

    <string name="dias_diferencia">DIAS DIFERENCIA</string>

    <!-- TODO: Remove or change this placeholder text -->


</resources>