<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/layoutLogin"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">



    <ImageView
        android:id="@+id/img1"
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_below="@+id/x3"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ic_baseline_school_24" />

    <TextView
        android:id="@+id/x2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img1"
        android:padding="0dp"
        android:text="UNIVERSIDAD DE LA AMISTAD"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/primaryColor"
        android:textSize="20dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/x4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/x2"
        android:padding="0dp"
        android:text="@string/comprometidos_con_tu_educacion"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="15dp"
        android:textStyle="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/x4"
        android:layout_marginTop="-1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="16dp"
        android:textColor="@color/primaryColor"
        android:text="@string/title_login"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/login_email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="30dp"
        android:text="@string/btn_login"
        android:textColor="@color/secondaryTextColor" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
    </LinearLayout>

</LinearLayout>